Fix. Image on theme card was distorted.

--- a/Assets/scss/imports/theme-cards.scss
+++ b/Assets/scss/imports/theme-cards.scss
@@ -1,7 +1,3 @@
-.card-img-top {
-    height: 200px;
-}
-
 .card.theme-card {
     min-height: 500px;
 }
