--- a/wwwroot/Styles/CoreUIAdmin.css
+++ b/wwwroot/Styles/CoreUIAdmin.css
@@ -112,9 +112,6 @@ span.field-validation-error {
 .page-title + .message {
   margin-top: -24px; }
 
-.card-img-top {
-  height: 200px; }
-
 .card.theme-card {
   min-height: 500px; }
 
